# HW_web8

./: pyproject.toml
homework_08.1/: main.py  models01.py  seed.py
homework_08.2/: cons08.02.py  mod02.py  prod08.02.py
