[tool.poetry]
name = "hw-web-8"
version = "0.1.0"
description = ""
authors = ["ariia horunzha <1mpellee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
cachetools = "^5.3.2"
pika = "^1.3.2"
faker = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
